# acciobook

./: .build.yml  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: build.sh
src/acciobook/: main.py
