[tool.poetry]
name = "accio"
version = "0.1.0"
description = "Scrape Harry Potter audiobooks from the web"
authors = ["Gregory Anders <pub@gpanders.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[tool.poetry.scripts]
accio = "accio.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
